Rapid Prd/src/objects/Lost_Boy__c.object
<CustomObject>
    <description>Custom Object for our Broker Out Partners</description>
    <fields>
        <fullName>BOBA_Commission__c</fullName>
        <label>BOBA Commission</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Submission_Link__c</fullName>
        <label>Client Submission Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <label>Key Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Deal_Terms__c</fullName>
        <label>New Deal Terms</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onboarded_Date__c</fullName>
        <label>Onboarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parallel_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parallel Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Link__c</fullName>
        <label>Portal Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Renewal_Eligibility__c</fullName>
        <label>Renewal Eligibility</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_Terms__c</fullName>
        <label>Renewal Terms</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Submission_Email__c</fullName>
        <label>Submission Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submission_Method__c</fullName>
        <label>Submission Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Client Link</fullName>
                </value>
                <value>
                    <fullName>Live Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lost Boy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lost Boy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lost Boys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>